--- a/app/src/main/res/layout/rodents_item_list.xml
+++ b/app/src/main/res/layout/rodents_item_list.xml
@@ -169,7 +169,9 @@
             android:layout_margin="3dp"
             android:layout_weight="1"
             android:backgroundTint="#048FCD"
-            android:text="Edytuj" />
+            android:text="Edytuj"
+            app:strokeColor="#0375a8"
+            app:strokeWidth="3dp" />
 
         <Button
             android:id="@+id/buttonDelete_rodent"
@@ -178,7 +180,9 @@
             android:layout_margin="3dp"
             android:layout_weight="1"
             android:backgroundTint="#DC3E3E"
-            android:text="Usuń" />
+            android:text="Usuń"
+            app:strokeColor="#9A2C2C"
+            app:strokeWidth="3dp" />
     </LinearLayout>
 
     <View
