--- a/app/src/main/res/layout/bottom_navbar.xml
+++ b/app/src/main/res/layout/bottom_navbar.xml
@@ -1,38 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+
+    <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainViews.ViewRodents">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#85C1C3"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textViewEmpty_rodent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="100dp"
-            android:layout_marginRight="30dp"
-            android:gravity="center"
-            android:text="Nie ma żadnych pozycji w bazie danych. Aby dodać pupila, kliknij przycisk z plusikiem na górze ekranu."
-            android:textSize="26sp"
-            android:visibility="gone" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerViewRodents"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="100dp" />
-    </LinearLayout>
-
-    <LinearLayout
+    tools:context=".MainViews.ViewRodents"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -63,7 +35,7 @@
                 android:orientation="vertical">
 
                 <ImageButton
-                    android:id="@+id/imageButton3"
+                    android:id="@+id/imageButton1_rodent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
@@ -71,13 +43,14 @@
                     android:layout_weight="1"
                     android:adjustViewBounds="true"
                     android:background="@drawable/roundbutton"
+                    android:onClick="onClickNavRodent"
                     android:padding="15dp"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/ic_chinchilla"
-                    app:tint="#FFFFF1" />
+                    app:tint="#0A4A97" />
 
                 <TextView
-                    android:id="@+id/textView8"
+                    android:id="@+id/textView1_rodent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -92,7 +65,7 @@
                 android:orientation="vertical">
 
                 <ImageButton
-                    android:id="@+id/imageButton"
+                    android:id="@+id/imageButton2_encyclopedia"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
@@ -100,13 +73,14 @@
                     android:layout_weight="1"
                     android:adjustViewBounds="true"
                     android:background="@drawable/roundbutton"
+                    android:onClick="onClickNavEncyclopedia"
                     android:padding="15dp"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/ic_encyclopedia"
                     app:tint="#0A4A97" />
 
                 <TextView
-                    android:id="@+id/textView9"
+                    android:id="@+id/textView2_encyclopedia"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -121,7 +95,7 @@
                 android:orientation="vertical">
 
                 <ImageButton
-                    android:id="@+id/imageButtonVet"
+                    android:id="@+id/imageButton3_health"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
@@ -129,14 +103,14 @@
                     android:layout_weight="1"
                     android:adjustViewBounds="true"
                     android:background="@drawable/roundbutton"
-                    android:onClick="onClickVet"
+                    android:onClick="onClickNavHealth"
                     android:padding="15dp"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/ic_health"
                     app:tint="#0A4A97" />
 
                 <TextView
-                    android:id="@+id/textView10"
+                    android:id="@+id/textView3_health"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -151,7 +125,7 @@
                 android:orientation="vertical">
 
                 <ImageButton
-                    android:id="@+id/imageButton4"
+                    android:id="@+id/imageButton4_other"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
@@ -159,13 +133,14 @@
                     android:layout_weight="1"
                     android:adjustViewBounds="true"
                     android:background="@drawable/roundbutton"
+                    android:onClick="onClickNavOther"
                     android:padding="15dp"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/ic_other"
                     app:tint="#0A4A97" />
 
                 <TextView
-                    android:id="@+id/textView11"
+                    android:id="@+id/textView4_other"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -176,16 +151,3 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/buttonAddRodents"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="10dp"
-        android:backgroundTint="#147EC5"
-        android:onClick="addNewRodent"
-        android:text="+"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
