--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,15 +4,25 @@
         <!-- Primary brand color. -->
         <item name="android:forceDarkAllowed">false</item>
         <item name="android:navigationBarColor">@color/black</item>
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">#0375a8</item>
         <item name="colorPrimaryVariant">#048FCD</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="android:windowBackground">#ACC5E1</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="AlertDialogStyle" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
+        <item name="android:background">#5397DF</item>
+        <item name="android:colorAccent">#ACC5E1</item>
+        <item name="android:textColor">#9A2C2C</item>
+        <item name="android:textColorPrimary">#02577d</item>
+        <item name="colorPrimary">#9A2C2C</item>
+
+
+    </style>
+
 </resources>
