Visits table and bugfixes

--- a/app/src/main/res/layout/activity_view_visits.xml
+++ b/app/src/main/res/layout/activity_view_visits.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context=".Medicaments.ViewMedicaments">
+    tools:context=".Visits.ViewVisits">
 
 
     <LinearLayout
@@ -24,20 +24,20 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textViewEmpty_med"
+                android:id="@+id/textViewEmpty_visit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="100dp"
                 android:layout_marginRight="30dp"
                 android:gravity="center"
-                android:text="Nie ma żadnych pozycji w bazie danych. Aby dodać nowe lekarstwo, kliknij przycisk z plusikiem na górze ekranu."
+                android:text="Nie ma żadnych pozycji w bazie danych. Aby dodać nową wizytę, kliknij przycisk z plusikiem na górze ekranu."
                 android:textColor="#5A5A5A"
                 android:textSize="26sp"
                 android:visibility="gone" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerViewMedicaments"
+                android:id="@+id/recyclerViewVisits"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -60,10 +60,10 @@
 
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/buttonAddMedicaments"
+        android:id="@+id/buttonAddVisits"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:onClick="addNewMedicament"
+        android:onClick="addNewVisit"
         android:layout_marginTop="14dp"
         android:layout_marginRight="14dp"
         android:background="@drawable/roundbutton"
@@ -74,8 +74,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:strokeColor="#0375a8"
-        app:strokeWidth="3dp" /><![CDATA[/>
-
-
-]]>
+        app:strokeWidth="3dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
